--- a/EloHeaven/EloHeaven.csproj
+++ b/EloHeaven/EloHeaven.csproj
@@ -321,7 +321,7 @@
     <Content Include="images\shaco-48.jpg" />
     <Content Include="images\swain-48.jpg" />
     <Content Include="images\unknown-summoner.png" />
-    <None Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
