Added exception handling/filter for when the Riot API is unavailable

--- a/EloHeaven.Infrastructure/EloHeaven.Infrastructure.csproj
+++ b/EloHeaven.Infrastructure/EloHeaven.Infrastructure.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\DataNotFoundException.cs" />
+    <Compile Include="Exceptions\ServiceUnavailableException.cs" />
+    <Compile Include="Extensions\WebExceptionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
