Found a better way to keep the Api Key out of git

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Elo Heaven Specific
+
+# Hide sensitive settings away from GitHub
+settings.config
