--- a/EloHeaven/Web.config
+++ b/EloHeaven/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EloHeaven-20160128075634.mdf;Initial Catalog=aspnet-EloHeaven-20160128075634;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="settings.config">
+    <add key="RiotApiKey" value="YouMustAddYourOwnDevelopmentApiKeyToSettings.Config" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
