Added App Insights to the project

--- a/EloHeaven/Web.config
+++ b/EloHeaven/Web.config
@@ -13,6 +13,7 @@
   </connectionStrings>
   <appSettings file="settings.config">
     <add key="RiotApiKey" value="YouMustAddYourOwnDevelopmentApiKeyToSettings.Config" />
+    <add key="InstrumentationKey" value="1e7bb520-cbba-4a5c-8e86-43964b03c627"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -29,11 +30,16 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.6.1" />
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     
   <handlers>
@@ -41,7 +47,9 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
