Added api functionality for adding and confirming summoners

--- a/EloHeaven.Infrastructure/EloHeaven.Infrastructure.csproj
+++ b/EloHeaven.Infrastructure/EloHeaven.Infrastructure.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\BadRequestException.cs" />
     <Compile Include="Exceptions\DataNotFoundException.cs" />
     <Compile Include="Exceptions\ServiceUnavailableException.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
