--- a/EloHeaven.Services.Logic/EloHeaven.Services.Logic.csproj
+++ b/EloHeaven.Services.Logic/EloHeaven.Services.Logic.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account\ISummonerService.cs" />
-    <Compile Include="Account\SummonerModel.cs" />
-    <Compile Include="Account\SummonerService.cs" />
+    <Compile Include="Account\Summoners\ISummonerService.cs" />
+    <Compile Include="Account\Summoners\SummonerConfirmationModel.cs" />
+    <Compile Include="Account\Summoners\SummonerModel.cs" />
+    <Compile Include="Account\Summoners\SummonerModelMapper.cs" />
+    <Compile Include="Account\Summoners\SummonerService.cs" />
+    <Compile Include="IModelMapper.cs" />
     <Compile Include="Inhouses\IInhouseService.cs" />
     <Compile Include="Inhouses\InhouseService.cs" />
     <Compile Include="Regions\IRegionService.cs" />
@@ -59,6 +62,10 @@
     <ProjectReference Include="..\EloHeaven.Entities\EloHeaven.Entities.csproj">
       <Project>{2B5A6873-E394-4C03-917D-8629EBCBC6D0}</Project>
       <Name>EloHeaven.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EloHeaven.Infrastructure\EloHeaven.Infrastructure.csproj">
+      <Project>{9FE4170F-BA58-4CD3-9BCF-05F11A439F28}</Project>
+      <Name>EloHeaven.Infrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\EloHeaven.Logic\EloHeaven.Logic.csproj">
       <Project>{26F73090-0650-4ADE-A77D-FFE44ED4B20D}</Project>
