--- a/EloHeaven/EloHeaven.csproj
+++ b/EloHeaven/EloHeaven.csproj
@@ -266,6 +266,7 @@
     <Content Include="App\Account\account.controller.js" />
     <Content Include="App\Account\account.service.js" />
     <Content Include="App\Account\account.view.html" />
+    <Content Include="App\Account\Summoners\confirmSummonerModal.service.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.directive.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.template.html" />
     <Content Include="App\Core\core.module.js" />
