Can now remove summoners from an account

--- a/EloHeaven/EloHeaven.csproj
+++ b/EloHeaven/EloHeaven.csproj
@@ -266,6 +266,9 @@
     <Content Include="App\Account\account.controller.js" />
     <Content Include="App\Account\account.service.js" />
     <Content Include="App\Account\account.view.html" />
+    <Content Include="App\Account\Summoners\removeSummoner.controller.js" />
+    <Content Include="App\Account\Summoners\removeSummoner.view.html" />
+    <Content Include="App\Account\Summoners\removeSummonerModal.service.js" />
     <Content Include="App\Account\Summoners\verifySummonerModal.service.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.directive.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.template.html" />
@@ -300,7 +303,7 @@
     <Content Include="App\Mentors\Application\summoners\addSummoners.controller.js" />
     <Content Include="App\Mentors\Application\summoners\addSummoners.view.html" />
     <Content Include="App\Account\Summoners\verifySummoner.controller.js" />
-    <Content Include="App\Account\Summoners\verifySummoner.html" />
+    <Content Include="App\Account\Summoners\verifySummoner.view.html" />
     <Content Include="App\Mentors\Application\terms\terms.controller.js" />
     <Content Include="App\Mentors\Application\terms\terms.view.html" />
     <Content Include="App\Mentors\championList.directive.js" />
