Angular refactoring - html files now properly state their type and module format improved

--- a/EloHeaven/EloHeaven.csproj
+++ b/EloHeaven/EloHeaven.csproj
@@ -272,13 +272,13 @@
     <Content Include="App\Account\Summoners\verifySummonerModal.service.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.directive.js" />
     <Content Include="App\Account\Summoners\leagueAccounts.template.html" />
-    <Content Include="App\Core\core.module.js" />
+    <Content Include="App\Core\eloHeaven.core.module.js" />
     <Content Include="App\Core\leagueApi.service.js" />
     <Content Include="App\Core\leaguePicture.directive.js" />
-    <Content Include="App\Core\leaguePicture.html" />
+    <Content Include="App\Core\leaguePicture.template.html" />
     <Content Include="App\Shared\request.service.js" />
     <Content Include="App\Core\summonerList.directive.js" />
-    <Content Include="App\Core\summonerList.html" />
+    <Content Include="App\Core\summonerList.template.html" />
     <Content Include="App\eloHeaven.module.js" />
     <Content Include="App\eloHeaven.routes.js" />
     <Content Include="App\Inhouses\inhouse.controller.js" />
@@ -286,9 +286,9 @@
     <Content Include="App\Inhouses\inhouse.view.html" />
     <Content Include="App\Inhouses\inhouses.module.js" />
     <Content Include="App\Inhouses\playerCard.directive.js" />
-    <Content Include="App\Inhouses\playerCard.html" />
-    <Content Include="App\mentorCard.directive.js" />
-    <Content Include="App\mentorCard.html" />
+    <Content Include="App\Inhouses\playerCard.template.html" />
+    <Content Include="App\Core\mentorCard.directive.js" />
+    <Content Include="App\Core\mentorCard.template.html" />
     <Content Include="App\Mentors\Application\application.controller.js" />
     <Content Include="App\Mentors\Application\application.service.js" />
     <Content Include="App\Mentors\Application\application.view.html" />
@@ -307,24 +307,24 @@
     <Content Include="App\Mentors\Application\terms\terms.controller.js" />
     <Content Include="App\Mentors\Application\terms\terms.view.html" />
     <Content Include="App\Mentors\championList.directive.js" />
-    <Content Include="App\Mentors\championList.html" />
+    <Content Include="App\Mentors\championList.template.html" />
     <Content Include="App\Mentors\championList.service.js" />
     <Content Include="App\Mentors\mentors.module.js" />
     <Content Include="App\Mentors\mentors.routes.js" />
     <Content Include="App\Mentors\search.controller.js" />
     <Content Include="App\Mentors\search.service.js" />
     <Content Include="App\Mentors\search.view.html" />
-    <Content Include="App\notifications.service.js" />
-    <Content Include="App\notificationsList.directive.js" />
-    <Content Include="App\notificationsList.html" />
-    <Content Include="App\profilePicture.directive.js" />
-    <Content Include="App\profilePicture.html" />
-    <Content Include="App\region.service.js" />
+    <Content Include="App\Core\Notifications\notifications.service.js" />
+    <Content Include="App\Core\Notifications\notificationsList.directive.js" />
+    <Content Include="App\Core\Notifications\notificationsList.template.html" />
+    <Content Include="App\Core\profilePicture.directive.js" />
+    <Content Include="App\Core\profilePicture.template.html" />
+    <Content Include="App\Core\region.service.js" />
     <Content Include="App\Shared\seaal.constants.js" />
     <Content Include="App\Shared\seaal.module.js" />
     <Content Include="App\Shared\selectall.directive.js" />
     <Content Include="App\Shared\starRating.directive.js" />
-    <Content Include="App\Shared\starRating.html" />
+    <Content Include="App\Shared\starRating.template.html" />
     <Content Include="App\Shared\starRating.service.js" />
     <Content Include="App\Shared\timezoneData.constant.js" />
     <Content Include="App\Shared\timezonePicker.directive.js" />
